  - Removed checks and special code for OS2 and __EMX__.
  - Removed check for MSDOS.
  - Removed checks and special code for __BEOS__.
  - Removed checks and special code for AMIGA.
  - Removed checks and work-arounds for very old gcc compilers (2.x, <3.2).
  - Removed checks and special code for SunOS4 (The last release of SunOS4
    was in 1994.)

05-May-2009 (Zesstra)
  - (prolang.y)
    Fix inconsistent F_NUMBER generation (#628).
    The compiler generates F_NUMBER at more than one places. ins_number()
    only writes a int32 into the bytecode, all the other places write a p_int,
    which interpret.c expects.
    The patch adds ins_p_int(), upd_p_int() and read_p_int().
    ins_number() now calls ins_p_int() upon generating the F_NUMBER instruction.
    Additionally upon storing a number (L_NUMBER) and in the unary '-'
    upd_p_int() is called instead of a direct memcpy(). (memcpy() is a bit
    faster, but I think it is much more risky to forget a place to change...)
  - (prolang.y) Fixed insert_pop_value().
    insert_pop_value() removes the last value from the stack. If possible, it
    patches the code to prevent that value from being computed at all (by
    removing the last expression). Unfortunately the function assumed that all
    operations have no data following in the bytecode. This patches changes it
    and enabled optimization/removal of operations with data.

05-May-2009 (Gnomi)
  - (lex.c, efuns.c) Improved numeric overflow detection. (Bug #630)
  - (pkg-gnutls.c) Don't abort on EINTR or EWOULDBLOCK.

04-May-2009 (Zesstra)
  - (efuns.c, efuns.h, func_spec, string_spec, doc/, mudlib/)
    Added new efun: configure_driver() and documentation.
    configure_driver() will configure variuous aspects of the driver at run-time.
    The first settings available is now the soft and hard memory limits.
  - (smalloc.c, slaballoc.c, sysmalloc.c, xptmalloc.c)
    Added soft and hard memory limits in output of then 'malloc' command.
  - (object.c)